[gd_scene load_steps=13 format=3 uid="uid://dlehlyeyqhfv6"]

[ext_resource type="Theme" uid="uid://clhad2uurm8i7" path="res://assets/UI_Theme.tres" id="1_lpdlg"]
[ext_resource type="Script" uid="uid://jbimh8xkaq5m" path="res://scr/UI/ui_manage_change_skill.gd" id="2_omd2g"]
[ext_resource type="Texture2D" uid="uid://ek5yx2s3pa8c" path="res://assets/Menu Buttons/Menu Buttons sprite (BnW).png" id="3_d8xsi"]
[ext_resource type="Script" uid="uid://bud2kmpri38r0" path="res://scr/UI/skill_list.gd" id="4_omd2g"]
[ext_resource type="Script" uid="uid://b54f6grn5n57y" path="res://scr/UI/skill_test.gd" id="4_qnok6"]
[ext_resource type="Texture2D" uid="uid://bvt1s332kbvk2" path="res://assets/2D_Pixel_Dungeon_Asset_Pack/Element_icon.png" id="5_3ihih"]
[ext_resource type="Script" uid="uid://dikx02s47qj4o" path="res://scr/UI/skill_manage.gd" id="7_d8xsi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m56eh"]
texture = ExtResource("3_d8xsi")
texture_margin_top = 9.63859
region_rect = Rect2(818.133, 833.217, 201.254, 200.868)

[sub_resource type="Theme" id="Theme_rfjj3"]
Button/styles/normal = SubResource("StyleBoxTexture_m56eh")

[sub_resource type="AtlasTexture" id="AtlasTexture_wd306"]
atlas = ExtResource("5_3ihih")
region = Rect2(416, 404.5, 179, 205)

[sub_resource type="LabelSettings" id="LabelSettings_7qo55"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_nelwc"]
font_size = 18

[node name="UiManageChangeSkill" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_lpdlg")
script = ExtResource("2_omd2g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Exit" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(162, 142)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60

[node name="Exit_Button" type="Button" parent="MarginContainer/VBoxContainer/Exit"]
layout_mode = 2
theme = SubResource("Theme_rfjj3")
theme_override_font_sizes/font_size = 36

[node name="skill_list" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(833, 656)
layout_mode = 2
size_flags_horizontal = 4

[node name="skill_list" type="GridContainer" parent="MarginContainer/VBoxContainer/skill_list"]
layout_mode = 2
theme_override_constants/h_separation = 127
theme_override_constants/v_separation = 30
columns = 3
script = ExtResource("4_omd2g")

[node name="skill_test" type="VBoxContainer" parent="MarginContainer/VBoxContainer/skill_list/skill_list"]
custom_minimum_size = Vector2(0, 313)
layout_mode = 2
theme_override_constants/separation = 23
script = ExtResource("4_qnok6")

[node name="PC" type="PanelContainer" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test"]
custom_minimum_size = Vector2(193, 241)
layout_mode = 2

[node name="skill_element_texture" type="TextureRect" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test/PC"]
modulate = Color(0.501407, 0.501406, 0.501406, 1)
layout_mode = 2
texture = SubResource("AtlasTexture_wd306")
expand_mode = 1

[node name="VBC" type="VBoxContainer" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test/PC"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="skill_name" type="Label" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test/PC/VBC"]
layout_mode = 2
text = "裂地衝擊"
label_settings = SubResource("LabelSettings_7qo55")
horizontal_alignment = 1

[node name="skill_level" type="Label" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test/PC/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "技能階級：5"
label_settings = SubResource("LabelSettings_nelwc")
horizontal_alignment = 1
autowrap_mode = 2

[node name="skill_element" type="Label" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test/PC/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "屬性：草"
label_settings = SubResource("LabelSettings_nelwc")
horizontal_alignment = 1
autowrap_mode = 2

[node name="skill_is_magic" type="Label" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test/PC/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "攻擊類別：魔法"
label_settings = SubResource("LabelSettings_nelwc")
horizontal_alignment = 1
autowrap_mode = 2

[node name="skill_power" type="Label" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test/PC/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "攻擊係數：0.9"
label_settings = SubResource("LabelSettings_nelwc")
horizontal_alignment = 1
autowrap_mode = 2

[node name="skill_cooldown" type="Label" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test/PC/VBC"]
custom_minimum_size = Vector2(161, 0)
layout_mode = 2
text = "技能冷卻：6s"
label_settings = SubResource("LabelSettings_nelwc")
horizontal_alignment = 1
autowrap_mode = 2

[node name="skill_del" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test"]
custom_minimum_size = Vector2(80, 49)
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/skill_list/skill_list/skill_test/skill_del"]
layout_mode = 2
text = "刪除"

[node name="switch_pages" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/switch_pages"]
custom_minimum_size = Vector2(463, 49)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 53

[node name="previous_page" type="MarginContainer" parent="MarginContainer/VBoxContainer/switch_pages/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2

[node name="previous_page_btn" type="Button" parent="MarginContainer/VBoxContainer/switch_pages/HBoxContainer/previous_page"]
layout_mode = 2
text = "上一頁"

[node name="skill_search" type="MarginContainer" parent="MarginContainer/VBoxContainer/switch_pages/HBoxContainer"]
custom_minimum_size = Vector2(220, 49)
layout_mode = 2
size_flags_horizontal = 4

[node name="skill_search" type="LineEdit" parent="MarginContainer/VBoxContainer/switch_pages/HBoxContainer/skill_search"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "搜尋技能名稱"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="next_page" type="MarginContainer" parent="MarginContainer/VBoxContainer/switch_pages/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2

[node name="next_page_btn" type="Button" parent="MarginContainer/VBoxContainer/switch_pages/HBoxContainer/next_page"]
layout_mode = 2
text = "下一頁"

[node name="skill_manage" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(735, 49)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 30
script = ExtResource("7_d8xsi")

[node name="skill_status" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_manage"]
layout_mode = 2
theme_override_constants/margin_left = 245

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/skill_manage/skill_status"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="skill_id" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer/skill_id"]
layout_mode = 2
placeholder_text = "技能代號"
alignment = 1
keep_editing_on_text_submit = true

[node name="skill_name" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer/skill_name"]
layout_mode = 2
placeholder_text = "技能名稱"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="skill_level" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer/skill_level"]
layout_mode = 2
placeholder_text = "等級"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="skill_element" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer/skill_element"]
layout_mode = 2
placeholder_text = "屬性"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="skill_is_magic" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer/skill_is_magic"]
layout_mode = 2
placeholder_text = "攻擊類別"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="skill_power" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer/skill_power"]
layout_mode = 2
placeholder_text = "攻擊係數"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="skill_cooldown" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer/skill_cooldown"]
layout_mode = 2
placeholder_text = "技能冷卻"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="skill_manage" type="MarginContainer" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
theme_override_constants/margin_left = 19

[node name="skill_manage_btn" type="Button" parent="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer/skill_manage"]
custom_minimum_size = Vector2(225, 49)
layout_mode = 2
text = "新增 / 編輯技能"

[connection signal="pressed" from="MarginContainer/VBoxContainer/switch_pages/HBoxContainer/previous_page/previous_page_btn" to="." method="_on_previous_page_btn_pressed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/switch_pages/HBoxContainer/skill_search/skill_search" to="." method="_on_skill_search_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/switch_pages/HBoxContainer/next_page/next_page_btn" to="." method="_on_next_page_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/skill_manage/skill_status/HBoxContainer/skill_manage/skill_manage_btn" to="MarginContainer/VBoxContainer/skill_manage" method="_on_skill_manage_btn_pressed"]
